--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   ],
   "devDependencies": {
     "grunt": "~0.4.0",
-    "yuicompressor": "~2.4.7"
+    "yuicompressor": "~2.4.7",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "uglify-js": "~2.3.6"
   },
   "jam": {
     "main": "dist/jquery.slider.amd.min.js",
@@ -28,14 +31,14 @@
     {
       "name": "Richard Mitchell",
       "email": "richard.mitchell@salesseek.co.uk"
-    } 
+    }
   ],
   "contributors": [
     {
       "name": "Egor Khmelev",
       "email": "hmelyoff@gmail.com",
-      "web": "http://egorkhmelev.com/" 
-    } 
+      "web": "http://egorkhmelev.com/"
+    }
   ],
   "bugs": "https://github.com/SalesSeek/jslider/issues",
   "licenses": [
@@ -46,7 +49,7 @@
   ],
   "repositories": [
     {
-      "type": "git", 
+      "type": "git",
       "url": "http://github.com/SalesSeek/jslider.git"
     }
   ],
